--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,14 @@ stages:
 jobs:
   include:
     - stage: default_job
-      if: env("BUILD_ACTION") = default
+      if: type = push AND env("BUILD_ACTION") = default
       script:
-        - echo "This is the default job"
+        - echo "This is the default job for push"
+    
+    - stage: default_job_pr
+      if: type = pull_request AND env("BUILD_ACTION") = default
+      script:
+        - echo "This is the default job for PR"
     
     - stage: example_job
       if: env("BUILD_ACTION") = example
